libs/preprocessor/tests/errors/pe8_if_undefined_runtime/source.hpp
#if __A3_DIAG__
#include <arma>
#endif
